Bug 1774467: Fixed bug where premature shutdown of dedicated worker could lead to browser crash. r=dom-storage-reviewers,asuth

Differential Revision: https://phabricator.services.mozilla.com/D151288